tests/ui/consts/miri_unleashed/non_const_fn.stderr
error[E0080]: calling non-const function `foo`
  --> $DIR/non_const_fn.rs:7:16
   |
LL | static C: () = foo();
   |                ^^^^^ evaluation of `C` failed here

warning: skipping const checks
   |
help: skipping check that does not even have a feature gate
  --> $DIR/non_const_fn.rs:7:16
   |
LL | static C: () = foo();
   |                ^^^^^

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
